[tool.poetry]
name = "please-cli"
version = "0.2.1"
description = "A new tab page for your terminal"
authors = ["Nayam Amarshe", "TGS963"]
packages = [{ include = "please" }]
license = "MIT"
readme = "README.MD"
repository = "https://github.com/NayamAmarshe/please"
homepage = "https://github.com/NayamAmarshe/please"
documentation = "https://github.com/NayamAmarshe/please"
keywords = ["please", "cli", "new tab"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.1"
rich = "^12.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
please = "please.please:main"
